--- a/css/style.css
+++ b/css/style.css
@@ -89,9 +89,20 @@ form input {
     left: 40px;
 }
 
+#defaultCodeCard ul {
+    display: inline-block;
+    padding-left: 10px;
+    margin: 10px 0;
+}
+
+#defaultCodeCard ul li {
+    display: inline-block;
+    list-style-type: none;
+}
+
 #namePerson {
     bottom: 30px;
-    left: 40px;
+    left: 35px;
 }
 
 #namePerson p {
@@ -101,7 +112,7 @@ form input {
 /*style for expiry card*/
 #expiryDate {
     bottom: 25px;
-    right: 50px;
+    right: 30px;
 }
 
 #validDate, #paragExpiryDate, #textAngular {
@@ -129,13 +140,23 @@ form input {
 }
 
 #textAngular {
-    width: 55px;
+    width: 70px;
     height: 25px;
     margin: 0 0 0 -55px;
 }
 
 #textAngular p {
     font-size: 1.2em;
+}
+
+#defaultTextAngular ul {
+    padding-left: 5px;
+    margin: 5px 0;
+}
+
+#defaultTextAngular ul li {
+    display: inline-block;
+    list-style-type: none;
 }
 
 
@@ -177,6 +198,16 @@ form input {
 
 #cvcCode p {
     font-size: 1.1em;
+}
+
+#defaultCvcCode ul {
+    padding-left: 10px;
+    margin: 5px 0;
+}
+
+#defaultCvcCode ul li {
+    list-style-type: none;
+    display: inline-block;
 }
 
 
