--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ p {
 
 /*input[type=number]::-webkit-inner-spin-button,*/
 /*input[type=number]::-webkit-outer-spin-button {*/
-    /*-webkit-appearance: none;*/
-    /*margin: 0;*/
+/*-webkit-appearance: none;*/
+/*margin: 0;*/
 /*}*/
 
 /*input[type='number'] {*/
-    /*-moz-appearance: textfield;*/
+/*-moz-appearance: textfield;*/
 /*}*/
 
 
@@ -101,14 +101,14 @@ form input {
 
 #defaultCodeCard ul {
     display: inline-block;
-    padding-left: 10px;
-    margin: 10px 0;
+    margin: 10px 0 0 10px;
+    padding: 0;
 }
 
 #defaultCodeCard ul li {
     display: inline-block;
     list-style-type: none;
-    padding: 2px;
+    padding: 1px;
 }
 
 #namePerson {
@@ -151,7 +151,7 @@ form input {
 }
 
 #textAngular {
-    width: 70px;
+    min-width: 70px;
     height: 25px;
     margin: 0 0 0 -55px;
 }
@@ -161,14 +161,14 @@ form input {
 }
 
 #defaultTextAngular ul {
-    padding-left: 5px;
-    margin: 5px 0;
+    margin: 3px 0;
+    padding: 0;
 }
 
 #defaultTextAngular ul li {
     display: inline-block;
     list-style-type: none;
-    padding: 1px;
+    padding: 0;
 }
 
 /*style for bgCard*/
@@ -211,14 +211,14 @@ form input {
 }
 
 #defaultCvcCode ul {
-    padding-left: 10px;
-    margin: 5px 0;
+    padding: 0;
+    margin: 5px 0 0 10px;
 }
 
 #defaultCvcCode ul li {
     list-style-type: none;
     display: inline-block;
-    padding: 1px;
+    padding: 0;
 }
 
 
@@ -245,4 +245,4 @@ form input {
 
 #infoText p {
     font-size: 0.55em;
- }
+}
